# prep-brain

./: .coverage  .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  COMMANDS.md  DECISIONS.md  Dockerfile.backend  Dockerfile.frontend  README.md  SYSTEM_PROMPT.md  config.yaml  debug_output.txt  debug_output_2.txt  docker-compose.yml  pyproject.toml  requirements.txt  run_dashboard.sh  run_dashboard_api.sh  run_dashboard_streamlit.sh  run_docker.sh
dashboard/: app.py  ui_components.py  utils.py
frontend/: index.html  tailwind.config.js
githooks/: pre-commit
prep_brain/: __init__.py  app.py  config.py  logging.py
scripts/: backup_db.py  install_githooks.sh  reingest_flavor_bible.py  scan_secrets.py  verify_all_safe.py  verify_rag.py
services/: allergens.py  argparse_simple.py  audit_log.py  autonomy.py  backup.py  bot.py  brain.py  chef_questions.py  command_runner.py  commands.py  commands_registry.py  costing.py  dashboard_api.py  doc_extract.py  eighty_six.py  entity_resolver.py  health.py  inventory.py  invoice_ingest.py  kitchen_ops.py  lexicon.py  mailer.py  memory.py  menu.py  metrics.py  notifier.py  notify.py  ops_router.py  order_guide.py  ordering.py  prep.py  prep_list.py  providers.py  rag.py  receiving.py  recipes.py  retry.py  schedule.py  service_notes.py  soft_delete.py  (+6 more)
tests/: test_allergens.py  test_argparse_simple.py  test_autonomy_heartbeat.py  test_autonomy_security.py  test_backup.py  test_brain_citations.py  test_brain_core.py  test_brain_recipe_integrity.py  test_chef_questions.py  test_command_runner.py  (+29 more)
(+57 files in other folders)
