[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 100
target-version = ["py312"]
exclude = '''
/(\
    \.git
  | \.venv
  | frontend/node_modules
  | data
  | logs
)/
'''

[tool.ruff]
line-length = 100
target-version = "py312"
exclude = [".git", ".venv", "frontend/node_modules", "data", "logs"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["prep_brain", "services", "dashboard"]

[tool.mypy]
python_version = "3.12"
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
disallow_untyped_defs = false
check_untyped_defs = true
exclude = "(^frontend/|^data/|^logs/)"

[[tool.mypy.overrides]]
module = ["telegram.*", "chromadb.*", "fitz", "streamlit", "sentence_transformers.*", "psutil"]
ignore_missing_imports = true

[tool.pytest.ini_options]
pythonpath = ["."]
